--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "minemind-forge",
   "private": true,
-  "version": "1.0.0",
+  "version": "1.2.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -13,6 +13,8 @@
     "jspdf": "^2.5.1",
     "jszip": "^3.10.1",
     "lucide-react": "^0.300.0",
+    "otpauth": "^9.2.2",
+    "qrious": "^4.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
